gcc/testsuite/rust/rustc/ui/rfc-2632-const-trait-impl/const-check-fns-in-const-impl.rs
#![allow(incomplete_features)]
#![feature(const_trait_impl)]

struct S;
trait T {
    fn foo();
}

fn non_const() {}

impl const T for S {
    fn foo() { non_const() }
// { dg-error ".E0015." "" { target *-*-* } .-1 }
}

fn main() {}

